--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 # TODO: add papers by configuration file
 base_url: "https://arxiv.paperswithcode.com/api/v0/papers/"
-user_name: "Vincentqyw"
-repo_name: "cv-arxiv-daily"
+user_name: "ybdesire"
+repo_name: "cv-arxiv-daily-vul-"
 show_authors: True
 show_links: True
 show_badge: True
-max_results: 10
+max_results: 50
 
 publish_readme: True
 publish_gitpage: True
@@ -22,18 +22,7 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
-    "SLAM": 
-        filters: ["SLAM", "Visual Odometry"]
-    "SFM":
-        filters: ["SFM", "Structure from Motion"]
-    "Visual Localization":
-        filters: ["Visual Localization","Camera Localization",
-                  "Camera Re-localisation","Loop Closure Detection",
-                  "visual place recognition","image retrieval"]
-    "Keypoint Detection":
-        filters: ["Keypoint Detection", "Feature Descriptor"]
-    "Image Matching":
-        filters: ["Image Matching", "Keypoint Matching", 
-                  "Line Segment Detection", "Local Feature Matching"]
-    "NeRF":
-        filters: ["NeRF"]
+    "LLMVulDetect": 
+        filters: ["Code Vulnerability Detection LLM", "Vulnerability Detection LLM"]
+    "LLMVulData":
+        filters: ["Code Vulnerability Detection data LLM"]
